# kubestack

./: .gitignore  .gitmodules  README.md  Saltfile  cloudflared.config.yml  compose.yml  deploy.sh  docker-compose.lgtm.yml  docker-compose.yml  fwd_nat  install.sh  k3s.sh  kind.yaml  kubestack.py  secrets.sample.yaml
OpenTelemetry/pytel/: Dockerfile  docker-compose.yml  pyproject.toml
OpenTelemetry/pytel/app/: main.py
ansible/: ansible.cfg  hosts  inventory.yaml  site.yaml  values.yaml
ansible/tasks/: brew.yaml  init.yaml
applications/gotel/: go.mod
applications/pytel/: main.py  pyproject.toml
bash/: fwd_nat.sh
charts/cloudflared/: cloudflared.config.yaml
charts/code-server/: Chart.yaml  values.yaml
etc-pihole/: .gitignore  cli_pw  dhcp.leases  dnsmasq.conf  pihole-FTL.db  pihole-FTL.db-shm  pihole-FTL.db-wal  pihole.toml  tls.crt  tls.pem  tls_ca.crt
etc-pihole/config_backups/: pihole.toml.1  pihole.toml.2  pihole.toml.3  pihole.toml.4  pihole.toml.5
etc-pihole/gravity_backups/: gravity.db.1  gravity.db.2
etc-pihole/hosts/: custom.list
etc-pihole/listsCache/: list.1.raw.githubusercontent.com.domains  list.1.raw.githubusercontent.com.domains.etag  list.1.raw.githubusercontent.com.domains.sha1  (+2 more)
etc/alloy/: config.alloy
jenkins/: Dockerfile  docker-compose.yml  values.yaml
kubernetes/: cert.yaml  grafana.yaml  ingress.yaml  k3s.sh  k3s_agent.sh  mlb.yaml  pool.yaml  s.yaml  sample.yaml  test.yaml
minio/: docker-compose.yml
networking/: ipv4_fwd
prometheus/: prometheus.yml
salt/: Saltfile  dev.sls  git.sls  kubernetes.sls  top.sls
(+110 files in other folders)
